[project]
name = "ipmg"
version = "1.0.0"
description = "IP Management & Ping Monitoring CLI Tool"
authors = [{ name="Sameer Alam" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "tqdm",
    "colorama",
    "openpyxl"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
ipmg = "ipmg.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# ---------- RUFF CONFIG ----------
[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "C90"]
ignore = ["E501"]  # ignore long lines (black handles line wrapping)
target-version = "py310"

[tool.ruff.isort]
combine-as-imports = true
force-single-line = false

# ---------- BLACK CONFIG ----------
[tool.black]
line-length = 100
target-version = ["py310"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]
